--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node /src",
-    "test": "env-cmd -f ./config/dev.env nodemon ./app.js"
+    "start": "node src/app.js",
+    "test": "env-cmd -f config/dev.env nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
-    "cors": "^2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
